--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,5 @@
-name: Build a Docker image
-on:  
-  push:
-jobs:  
-  build:    
-    runs-on: ubuntu-latest    
-    steps:      
-      - name: Checkout the repostiory        
-        uses: actions/checkout@v4      
-      - name: Build the image        
-        uses: docker build -t node-app:latest .      
-      - name: List the built Docker image        
-        run: docker image ls
+FROM node:18-alpineWORKDIR /app
+COPY . .
+RUN yarn install --production
+CMD ["node", "src/index.js"]
+EXPOSE 3000
